--- a/g5Mindr/g5Mindr/XIBs/g5ReminderListViewController.xib
+++ b/g5Mindr/g5Mindr/XIBs/g5ReminderListViewController.xib
@@ -14,11 +14,11 @@
                 <outlet property="centerButtonBackgroundImage" destination="rn1-kR-7VZ" id="7dV-9k-dIm"/>
                 <outlet property="centerButtonBottomConstraint" destination="uNk-PM-xpg" id="YdY-ie-WLL"/>
                 <outlet property="centerButtonHeightConstraint" destination="Rpd-l1-bQZ" id="g2W-bH-suw"/>
+                <outlet property="contentView" destination="Sog-WI-tIC" id="F71-2X-kxJ"/>
                 <outlet property="nextButtonBackground" destination="fNq-rv-9gl" id="S6I-Rb-C1K"/>
                 <outlet property="nextButtonBottomConstraint" destination="pI9-cO-jUd" id="CgS-39-dbH"/>
                 <outlet property="nextButtonContainerView" destination="uEN-4M-Brb" id="DlX-3c-QNd"/>
                 <outlet property="nextButtonTrailingConstraint" destination="8Uc-vA-oTY" id="UkY-4g-GRV"/>
-                <outlet property="reminderTableView" destination="uw2-LS-xDB" id="AzV-MX-hoD"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -31,15 +31,10 @@
                     <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                     <color key="backgroundColor" red="0.18823529410000001" green="0.37647058820000001" blue="0.58431372550000005" alpha="1" colorSpace="calibratedRGB"/>
                 </imageView>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="54" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="uw2-LS-xDB" userLabel="TableView - Reminder">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Sog-WI-tIC" userLabel="Content View">
                     <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                    <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                    <connections>
-                        <outlet property="dataSource" destination="-1" id="1T9-TV-Kel"/>
-                        <outlet property="delegate" destination="-1" id="XpM-NT-ar6"/>
-                    </connections>
-                </tableView>
+                </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uEN-4M-Brb">
                     <rect key="frame" x="600" y="600" width="130" height="130"/>
                     <subviews>
@@ -201,29 +196,27 @@
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="2UO-nB-EVQ" secondAttribute="trailing" id="0FE-Xb-qLo"/>
                 <constraint firstItem="IjJ-lc-C2D" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="-130" id="6SS-cA-nTa" userLabel="Back Button Leading"/>
-                <constraint firstItem="uw2-LS-xDB" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="7yX-bM-EZ1"/>
                 <constraint firstAttribute="trailing" secondItem="uEN-4M-Brb" secondAttribute="trailing" constant="-130" id="8Uc-vA-oTY" userLabel="Next Button Trailing"/>
-                <constraint firstAttribute="bottom" secondItem="uw2-LS-xDB" secondAttribute="bottom" id="96a-OP-wXy"/>
                 <constraint firstItem="YEV-Fs-vfi" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="9tD-Ex-4qw"/>
-                <constraint firstAttribute="trailing" secondItem="uw2-LS-xDB" secondAttribute="trailing" id="AY4-53-r4b"/>
                 <constraint firstItem="ERZ-VW-qkk" firstAttribute="centerY" secondItem="rn1-kR-7VZ" secondAttribute="centerY" id="JEj-WW-XR9"/>
+                <constraint firstAttribute="bottom" secondItem="Sog-WI-tIC" secondAttribute="bottom" id="Nis-wT-Jst"/>
                 <constraint firstItem="2UO-nB-EVQ" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="R2b-ZH-lOw"/>
+                <constraint firstItem="Sog-WI-tIC" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="UJc-0c-KpR"/>
                 <constraint firstItem="ERZ-VW-qkk" firstAttribute="top" secondItem="YEV-Fs-vfi" secondAttribute="bottom" id="XH5-Z5-Xfu"/>
-                <constraint firstItem="uw2-LS-xDB" firstAttribute="top" secondItem="2UO-nB-EVQ" secondAttribute="bottom" id="XME-9g-Y8c"/>
-                <constraint firstItem="uw2-LS-xDB" firstAttribute="top" secondItem="2UO-nB-EVQ" secondAttribute="bottom" id="Z7X-rt-Wfq"/>
+                <constraint firstItem="Sog-WI-tIC" firstAttribute="top" secondItem="2UO-nB-EVQ" secondAttribute="bottom" id="aHf-FZ-2Yg"/>
                 <constraint firstItem="rn1-kR-7VZ" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="aiq-gx-D1G"/>
                 <constraint firstItem="ERZ-VW-qkk" firstAttribute="top" secondItem="rn1-kR-7VZ" secondAttribute="top" constant="10" id="ao2-jY-InM"/>
                 <constraint firstItem="YEV-Fs-vfi" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="gEU-E9-Sau"/>
                 <constraint firstAttribute="bottom" secondItem="ERZ-VW-qkk" secondAttribute="bottom" id="ieE-CL-lrd"/>
                 <constraint firstItem="ERZ-VW-qkk" firstAttribute="top" secondItem="uEN-4M-Brb" secondAttribute="bottom" constant="181" id="jqV-8T-vZD"/>
+                <constraint firstItem="rn1-kR-7VZ" firstAttribute="top" secondItem="Sog-WI-tIC" secondAttribute="bottom" constant="181" id="jsW-eK-xlh"/>
                 <constraint firstItem="ERZ-VW-qkk" firstAttribute="top" secondItem="rn1-kR-7VZ" secondAttribute="bottom" id="lgC-az-Vs2"/>
+                <constraint firstAttribute="trailing" secondItem="Sog-WI-tIC" secondAttribute="trailing" id="lgY-4x-kMo"/>
                 <constraint firstItem="ERZ-VW-qkk" firstAttribute="centerX" secondItem="rn1-kR-7VZ" secondAttribute="centerX" id="oZt-o8-cHf"/>
                 <constraint firstAttribute="trailing" secondItem="YEV-Fs-vfi" secondAttribute="trailing" id="p7a-JH-p2v"/>
                 <constraint firstAttribute="bottom" secondItem="uEN-4M-Brb" secondAttribute="bottom" constant="-130" id="pI9-cO-jUd" userLabel="Next Button Bottom"/>
-                <constraint firstAttribute="bottom" secondItem="uw2-LS-xDB" secondAttribute="bottom" id="qAw-BO-ttj"/>
                 <constraint firstItem="ERZ-VW-qkk" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="qYm-E8-yOH"/>
                 <constraint firstAttribute="bottom" secondItem="IjJ-lc-C2D" secondAttribute="bottom" constant="-130" id="tbO-W0-nhe" userLabel="Back Button Bottom"/>
-                <constraint firstItem="uw2-LS-xDB" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="uLi-6E-hzL"/>
                 <constraint firstAttribute="bottom" secondItem="rn1-kR-7VZ" secondAttribute="bottom" constant="-55" id="uNk-PM-xpg" userLabel="Center Button Bottom"/>
                 <constraint firstAttribute="bottom" secondItem="uEN-4M-Brb" secondAttribute="bottom" constant="65" id="uR5-eq-qvn"/>
                 <constraint firstAttribute="bottom" secondItem="YEV-Fs-vfi" secondAttribute="bottom" id="vlK-tn-Ahc"/>
@@ -231,9 +224,7 @@
             </constraints>
             <variation key="default">
                 <mask key="constraints">
-                    <exclude reference="7yX-bM-EZ1"/>
-                    <exclude reference="96a-OP-wXy"/>
-                    <exclude reference="Z7X-rt-Wfq"/>
+                    <exclude reference="jsW-eK-xlh"/>
                     <exclude reference="JEj-WW-XR9"/>
                     <exclude reference="XH5-Z5-Xfu"/>
                     <exclude reference="ieE-CL-lrd"/>
